# impermanent-loss-quantum-optimization

./: .env.example  LICENSE  README.md  hubo_poly.json  pilot-experiments.ipynb  pyproject.toml  server.py  solverdirac3_optimize.py
data/: hedges.json  pools.json  result.json  scenarios.json
data copy/: hedges.json  pools.json  result.json  scenarios.json
data_pipeline/: __init__.py  apy_fetcher.py  deribit_fetcher.py  gas_fetcher.py  hedge_pricer.py  price_fetcher.py  run_all.py  scenario_builder.py
defi-shield-main/: index.html  package-lock.json  tailwind.config.ts
defi-shield-main/src/: App.tsx  index.css
defi-shield-main/src/components/: BucketSelector.tsx  Header.tsx  ImportExportButtons.tsx  ModeToggle.tsx  PoolTable.tsx  ResultsView.tsx  ScenarioSelector.tsx  Tooltip.tsx  WaitlistForm.tsx
defi-shield-main/src/data/: seedData.ts
defi-shield-main/src/hooks/: useAppState.ts
defi-shield-main/src/lib/: solver.ts
defi-shield-main/src/pages/: History.tsx  Landing.tsx  Optimizer.tsx  Optimizer.tsx.bak  Results.tsx
defi-shield-main/src/types/: index.ts
defi-shield-main/supabase/: config.toml
defi-shield-main/supabase/functions/dirac-solver/: index.ts
